<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Send resume</string>
    <string name="hh_test">Head Hunter test app</string>
    
    <string name="send_response">Send response</string>
    <string name="action_settings">Settings</string>
	<string name="fio_str_activity1">Enter your full name</string>
	<string name="birth_date_activity1">Birth date</string>
	<string name="position_name_activity1">Position name</string>
	<string name="salary_activity1">Salary(in rubles)</string>
	<string name="phone_activity1">Phone number</string>
	<string name="email_activity1">Email</string>
	<string name="send_resume_button_text_activity1">Send resume</string>
	
	<string name="fio_str_activity2">Full name of the candidate</string>
	<string name="birth_date_activity2">Birthdate</string>
	<string name="sex_activity2">Sex</string>
	<string name="position_activity2">Position</string>
	<string name="salary_activity2">Salary in rubles</string>
	<string name="phone_activity2">Phone number</string>
	<string name="email_activity2">Email</string>
	<string name="response_for_candidate_activity2">Response to candidate</string>
	<string name="send_response_button_text_activity2">Send response</string>
	
	<string name="man">Man</string>
	<string name="woman">Woman</string>
	
	<string name="response_from_employer_activity1">Response from employer</string>
	<string name="email_to_candidate_subject">From employer XXX</string>
	<string name="email_to_candidate_hello">Hello, </string>
	<string name="email_to_candidate_text">. Its emplyer XXX. We are interested in your </string>
	
	<string name="message_to_candidate_text2_1">Hello, </string>
	<string name="message_to_candidate_text2_2">". PUT YOUR MESSAGE TO CANDIDATE HERE \n Head Hunter company."</string>
	
	<string name="error_message_fio">Put your last first and middle name before sending.</string>	
	
	
	<string name="message_text">Text of your message</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="maybe">Maybe</string>
	
</resources>
