<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/fio_str_activity2"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tvBirthDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/birth_date_activity2"
        />

        <TextView
            android:id="@+id/tvSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/sex_activity2"
        />
        
        <TextView
            android:id="@+id/tvPositionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/position_activity2"
        />
        
        <TextView
            android:id="@+id/tvSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/salary_activity2"
             />
        
		<TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:textColor="#000000"
            android:hint="@string/phone_activity2"
        />
        
        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:textColor="#000000"
            android:hint="@string/email_activity2"
       />
        
        <EditText
            android:id="@+id/edResponse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/response_for_candidate_activity2"
            android:inputType="textMultiLine"
            android:minLines="5" >
        </EditText>

        <Button
            android:id="@+id/btnSendResponse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_response_button_text_activity2" />
    </LinearLayout>

</ScrollView>